[gd_scene load_steps=5 format=2]

[ext_resource path="res://stages/TestScene.gd" type="Script" id=1]
[ext_resource path="res://ui/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://managers/EnemyManager.tscn" type="PackedScene" id=4]

[node name="TestScene" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Background" parent="." index="0" instance=ExtResource( 2 )]

[node name="Player" parent="." index="1" instance=ExtResource( 3 )]

_sections_unfolded = [ "Collision", "Transform" ]

[node name="EnemyManager" parent="." index="2" instance=ExtResource( 4 )]

spawn_interval = 1.0
enemy_speed = 50

[connection signal="shoot" from="Player" to="." method="_on_Player_shoot"]

[connection signal="enemy_destroyed" from="EnemyManager" to="." method="_on_EnemyManager_enemy_destroyed"]


